eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-todolist-grpc-api-deployment
  labels:
    app: go-todolist-grpc-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-todolist-grpc-api
  template:
    metadata:
      labels:
        app: go-todolist-grpc-api
    spec:
      containers:
      - name: go-todolist-grpc-api
        image: 767397676228.dkr.ecr.ap-northeast-1.amazonaws.com/go-todolist-grpc:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8642
          name: http-server
        - containerPort: 7531
          name: grpc-server
